2005-08-18  Petr Ovtchenkov  <ptr@island...>

	* INSTALL: add some words about multithread options and libraries.

	* stlport/stl/_fstream.c: some code clean to reduse bogus compiler
	warnings with -Wall.

2005-08-18  Francois Dumont  <dums@stlport...>

	* stlport/stl/_vector.h: Fix _M_erase range for movable types
	implementation thanks Sergej Zagursky.

	* build/Makefiles/nmake/vc8.mak: removed /RTC1 compiler option, the platform
	SDK compiler do not support it. STLport users will just have to activate it
	by themself if they want to.

2005-08-17  Francois Dumont  <dums@stlport...>

	* stlport/stl/_complex.h: Fix some floating point literals thanks
	 Ulrich Eckhardt report.

	* stlport/stl/_time_facets.c: Complete integration of the '#' MS extension
	in the date/time format string, reported thanks to the recent locale time_get
	new test case.
	
2005-08-14  Francois Dumont  <dums@stlport...>

	* stlport/config/stl_msvc.h: Fix platform SDK compiler config, even latest
	version that announce to be similar to .Net 2005 beta do not throw bad_alloc
	from the new operator.

	* stlport/cstdio, cstdlib: Replaced some _WIN64 checks by a
	_STLP_USING_PLATFORM_SDK_COMPILER check.

	* test/unit/cmath_test.cpp: Complete test filtering for Microsoft platform SDK
	compiler.

2005-08-14  Petr Ovtchenkov  <ptr@island...>

	* test/unit/locale_test.cpp: tests for time_get facet.

	* stlport/stl/_time_facets.c: fix processing of %p format
	[12:00 PM ~ 12:00, 12:00 AM ~ 00:00].

	* src/time_facets.cpp: substitute expanded equivalent format strings
	instead of %T, %R, %r.

	* stlport/pthread.h: Fix C++ comment in a potentially C header. Thanks Ali

2005-08-11  Francois Dumont  <dums@stlport...>

	* stlport/stl_user_config.h: Add _STLP_USING_PLATFORM_SDK_COMPILER so that
	STLport user can signal they are using platform SDK compiler.

	* stlport/config/stl_msvc.h: Add use of _STLP_USING_PLATFORM_SDK_COMPILER.

	* test/unit/cmath_test.cpp, valarray_test.cpp: Removed tanh calls when using